bugfix | spacing adjustments

--- a/app/globals.css
+++ b/app/globals.css
@@ -55,7 +55,7 @@
         }
 
         .hero-featured-work {
-            @apply p-4 lg:py-8 xl:py-10 2xl:py-12 space-y-2 md:space-y-6 lg:space-y-8 xl:space-y-10 2xl:space-y-12;
+            @apply p-4 lg:py-8 xl:py-10 2xl:py-12 space-y-8 xl:space-y-10 2xl:space-y-12;
 
             p {
                 @apply text-base md:text-lg lg:text-xl xl:text-xl 2xl:text-2xl;
@@ -86,7 +86,7 @@
         }
 
         .hero-featured-contact {
-            @apply flex flex-col px-2 py-96 space-y-2 md:space-y-6 lg:space-y-8 xl:space-y-10 2xl:space-y-12;
+            @apply flex flex-col px-2 py-[25rem] space-y-2 md:space-y-6 lg:space-y-8 xl:space-y-10 2xl:space-y-12;
 
             p {
                 @apply text-base md:text-lg lg:text-xl xl:text-xl 2xl:text-2xl;
